# poc-py-playwright

./: Jenkinsfile  pyproject.toml  pytest.ini
pages/: base_page.py  page_freerange_sandbox.py  page_home_checkmk.py  page_home_portfolio.py
tests/: conftest.py  test_api.py  test_check.py  test_freerange_sandbox.py  test_inter_ui_api.py  test_navigation.py
